Switch to docker checks on Travis

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,7 +2,7 @@
 dependency:
   name: galaxy
 driver:
-  name: podman
+  name: docker
 lint: |
    set -e
    yamllint . molecule/default/yaml-lint.yml
