Workaround awx bug

--- a/tasks/nginx_static_site.yml
+++ b/tasks/nginx_static_site.yml
@@ -119,9 +119,10 @@
   notify: restart nginx
   when: nginx_site.request_acme_cert|default(True) and (nginx_site.with_ssl|default(True))
 
-- name: Make sure we can restart nginx
+- name: Make sure we can restart nginx (reset failed count)
   command: systemctl reset-failed nginx  # noqa 303
   changed_when: false
+  when: not nginx_less_restarts|default(False)
 
 - meta: flush_handlers
   when: not nginx_less_restarts|default(False)
