--- a/tasks/nginx_static_site_preflight.yml
+++ b/tasks/nginx_static_site_preflight.yml
@@ -3,4 +3,5 @@
   copy:
     dest: "{{ nginx_sites_dir }}/{{ nginx_site.name }}.conf"
     content: "# This is dummy file. It will be overwritten in few minutes\n"
+    mode: '{{ nginx_config_permissions }}'
     force: false     # don't overwrite the file when exists
