fix: add include_tasks - vol3

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,7 +27,7 @@
   ignore_errors: '{{ nginx_firewalld_ignore_errors }}'
 
 - name: Create safe DH params
-  include: nginx-dhparams.yml
+  include_tasks: nginx-dhparams.yml
 
 - name: Create sites.d
   file:
